// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label tests render Label correctly 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  border-radius: 4px;
  padding: 0.25rem 0.375rem;
  font-size: 0.875rem;
  line-height: 1rem;
  font-weight: 400;
  color: #545454;
  background-color: #E2E2E2;
}

<div
    class="c0"
    data-testid="label-container"
    variant="default"
  >
    label
  </div>
</DocumentFragment>
`;

exports[`Label tests render isTranslucent Label 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  border-radius: 4px;
  padding: 0.25rem 0.375rem;
  font-size: 0.875rem;
  line-height: 1rem;
  font-weight: 400;
  color: #1E54B7;
  background-color: rgba(39,110,241,0.1);
}

<div
    class="c0"
    data-testid="label-container"
    variant="info"
  >
    label
  </div>
</DocumentFragment>
`;
